# autocodeCLI

./: .gitignore  LICENSE  README.md  pyproject.toml
src/autocodeCLI/: agent.py  banner.py  cli.py  commands.py  dijkstra.md  dynamic_programming.md  model_comfig.py  parser.py  subagents.py
src/autocodeCLI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/coding_agent/: cli.py
src/coding_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
